# fun-with-haskell

./: README.md  first.lhs  fun-with-haskell.cabal
craft3e/: HsLibrary.hs  RockPaperScissor.hs  ch03.hs  ch04.hs  ch05.hs  ch06.hs  ch07.hs  ch08.hs
prog-lang/: HsCard.hs  HsDate.hs  HsPatterns.hs
src/craft3e/: Chapter03.hs  Chapter04.hs  Chapter05.hs  Chapter06.hs  Chapter07.hs  Chapter08.hs  HsGame.hs  Library.hs
src/lyah/: own-types.hs  starting-out.hs  syntax-in-functions.hs  types-and-typeclasses.hs
src/prog-lang/: HsCard.hs  HsFun.hs  HsStrings.hs
